[package]
name = "cluster-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
regex = "1.7"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
glob = "0.3"
dialoguer = "0.10"
dirs-next = "2.0"
kube = { version = "0.96", features = ["client", "config"] }
k8s-openapi = { version = "0.23", features = ["v1_30"] }
indicatif = "0.16"